# hissedari

./: .gitignore  Anchor.toml  next.config.ts  package-lock.json  package.json  supabase-schema.sql
programs/crowdfunding/: Cargo.toml
programs/crowdfunding/src/: lib.rs
programs/marketplace/: Cargo.toml
programs/marketplace/src/: lib.rs
programs/property_dividends/: Cargo.toml  README.md
programs/property_dividends/src/: lib.rs
scripts/: add-whitelist.ts  init-db.ts  init-marketplace.ts  init-platform.ts  run-sql.js  setup-supabase.js
src/app/: globals.css  layout.tsx  page.tsx
src/app/admin/dividends/: page.tsx
src/app/admin/registrations/: page.tsx
src/app/api/crowdfunding/whitelist/: route.ts
src/app/api/db/init/: route.ts
src/app/api/properties/: route.ts
src/app/api/properties/investments/: route.ts
src/app/api/registration-requests/: route.ts
src/app/api/registration-requests/[id]/: route.ts
src/app/api/upload/: route.ts
src/app/dashboard/: page.tsx
src/app/marketplace/: page.tsx
src/app/properties/: page.tsx
src/app/properties/[id]/: PropertyDetailClient.tsx  page.tsx
src/app/register/: page.tsx
src/app/sell/: page.tsx
src/components/: FileUpload.tsx  Footer.tsx  Navbar.tsx  PropertyCard.tsx  WalletProvider.tsx
src/data/: properties.ts
src/lib/: binaryUtils.ts  crowdfundingClient.ts  dividendClient.ts  marketplaceClient.ts  propertyStore.ts  registrationRequests.ts  registrationWhitelist.ts  solana.ts  supabase.ts
src/lib/server/: onChainAdmin.ts
supabase/migrations/: 20240426000000_init.sql
(+1 files in other folders)
