[package]
name = "property-dividends"
version = "0.1.0"
description = "Solana smart contract for real estate property dividend distribution"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "property_dividends"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
